--- a/andFlmsg_Head_CPP120/src/main/res/layout/about.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/about.xml
@@ -20,21 +20,7 @@
 			<TextView 
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
 				android:textSize="18sp" android:padding="5dp"
-				android:text="
-    
-    Open source software under GNU licence.\n\n     Based on Fldigi and Flmsg by David (Dave) Freese (W1HKJ) and team.
-     
-\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
- 
-\n\n\n
-
-Includes the library aFileDialog (Copyright 2013 Jose F. Maldonado), under the following license:
-
-This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
-
-This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
-
-You should have received a copy of the GNU Lesser General Public License along with this library; If not, see http://www.gnu.org/licenses/. " />
+				android:text="@string/txt_license" />
 			<LinearLayout android:id="@+id/FrameLayout2"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
@@ -42,7 +28,7 @@ You should have received a copy of the GNU Lesser General Public License along w
 				android:weightSum="1">
 				<Button android:id="@+id/button_returntoterminal"
 					android:layout_height="fill_parent" 
-					android:text="Return To Terminal"
+					android:text="@string/bt_ReturnToTerminal"
 					android:layout_width="57dp" 
 					android:layout_weight="0.08"></Button>
 			</LinearLayout>
