--- a/andFlmsg_Head_CPP120/src/main/res/layout/arlhxdialog.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/arlhxdialog.xml
@@ -19,7 +19,7 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="70dp"
 	        android:layout_gravity="fill_vertical"
-	        android:text="Add Delivery Code" >
+	        android:text="@string/bt_AddDeliveryCode" >
 	    </Button>
 	     <EditText
 	         android:id="@+id/hxfield"
