--- a/andFlmsg_Head_CPP120/src/main/res/layout/draftsmenupopup.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/draftsmenupopup.xml
@@ -17,14 +17,14 @@
 			        android:layout_width="87dp"
 			        android:layout_height="87dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Delete" >
+			        android:text="@string/bt_Delete" >
 			    </Button>
 			    <Button
 			        android:id="@+id/button_return"
 			        android:layout_width="87dp"
 			        android:layout_height="87dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Return" >
+			        android:text="@string/bt_Return" >
 			    </Button>
 			</LinearLayout>
 			<WebView
