--- a/andFlmsg_Head_CPP120/src/main/res/layout/formsmenupopup.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/formsmenupopup.xml
@@ -17,21 +17,21 @@
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Tfer Form Only" >
+			        android:text="@string/bt_TransferFormOnly" >
 			    </Button>
 			    <Button
 			        android:id="@+id/button_shareoverinternet"
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Share" >
+			        android:text="@string/bt_Share" >
 			    </Button>
    			    <Button
 			        android:id="@+id/button_return"
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Return" >
+			        android:text="@string/bt_Return" >
 			    </Button>
 			</LinearLayout>
 			<WebView  
