--- a/andFlmsg_Head_CPP120/src/main/res/layout/messages.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/messages.xml
@@ -9,22 +9,86 @@
     <ListView android:layout_width="fill_parent"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll"
-        android:id="@+id/maillist" android:layout_height="298dp" android:layout_weight="0.82"/>
-    <LinearLayout android:id="@+id/FrameLayout3" android:layout_width="fill_parent" 
-    android:layout_height="50dp" android:layout_weight="0.08" android:weightSum="1">
-        <Button android:id="@+id/button_inbox" android:text="Inbox" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button_forms" android:text="Compose" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button_templates" android:text="Templates" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button_drafts" android:text="Drafts" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
+        android:id="@+id/maillist"
+        android:layout_height="298dp"
+        android:layout_weight="0.82"/>
+    <LinearLayout
+        android:id="@+id/FrameLayout3"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_weight="0.08"
+        android:weightSum="1">
+        <Button
+            android:id="@+id/button_inbox"
+            android:text="@string/bt_Inbox"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
+        <Button
+            android:id="@+id/button_forms"
+            android:text="@string/bt_Compose"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
+        <Button
+            android:id="@+id/button_templates"
+            android:text="@string/bt_Templates"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
+        <Button
+            android:id="@+id/button_drafts"
+            android:text="@string/bt_Drafts"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
         </LinearLayout>
-    <LinearLayout android:id="@+id/FrameLayout4" android:layout_width="fill_parent" 
-    android:layout_height="50dp" android:layout_weight="0.08" android:weightSum="1">
-        <Button android:id="@+id/button_outbox" android:text="Outbox" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button_sentitems" android:text="Sent" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button_logs" android:text="Logs" android:layout_height="fill_parent" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button_sendall" android:text="Send All Messages" android:layout_height="fill_parent" android:enabled="false" android:layout_weight="0.25" android:layout_width="fill_parent"></Button>
+    <LinearLayout
+        android:id="@+id/FrameLayout4"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_weight="0.08"
+        android:weightSum="1">
+        <Button
+            android:id="@+id/button_outbox"
+            android:text="@string/bt_Outbox"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
+        <Button
+            android:id="@+id/button_sentitems"
+            android:text="@string/bt_Sent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
+        <Button
+            android:id="@+id/button_logs"
+            android:text="@string/bt_Logs"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
+        <Button
+            android:id="@+id/button_sendall"
+            android:text="@string/bt_SendAllMessages"
+            android:layout_height="fill_parent"
+            android:enabled="false"
+            android:layout_weight="0.25"
+            android:layout_width="fill_parent">
+        </Button>
     </LinearLayout>
-    <LinearLayout android:id="@+id/FrameLayout5" android:layout_width="fill_parent" 
-    android:layout_height="5dp" android:layout_weight="0.08" android:weightSum="1" android:orientation="horizontal" >
+    <LinearLayout
+        android:id="@+id/FrameLayout5"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"
+        android:layout_weight="0.08"
+        android:weightSum="1"
+        android:orientation="horizontal" >
     </LinearLayout>
 </LinearLayout>
