--- a/andFlmsg_Head_CPP120/src/main/res/layout/sentitemsmenupopup.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/sentitemsmenupopup.xml
@@ -17,28 +17,28 @@
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="To Outbox" >
+			        android:text="@string/bt_ToOutbox" >
 			    </Button>
 			    <Button
 			        android:id="@+id/button_shareoverinternet"
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Share" >
+			        android:text="@string/bt_Share" >
 			    </Button>
 			    <Button
 			        android:id="@+id/button_delete"
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Delete" >
+			        android:text="@string/bt_Delete" >
 			    </Button>
 			    <Button
 			        android:id="@+id/button_return"
 			        android:layout_width="87dp"
 			        android:layout_height="70dp"
 			        android:layout_gravity="fill_vertical"
-			        android:text="Return" >
+			        android:text="@string/bt_Return" >
 			    </Button>
 			</LinearLayout>
 			<WebView  
