--- a/andFlmsg_Head_CPP120/src/main/res/layout/sharedialog.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/sharedialog.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Choose what purpose are you sharing this message for:"
+        android:text="@string/txt_SharingPurpose"
         android:textSize="@dimen/abc_text_size_medium_material" />
     
     <RadioGroup
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
-            android:text="for Viewing or Printing" 
+            android:text="@string/txt_ViewPrint"
             android:checked= "true" />
         
         <RadioButton
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
-            android:text="for Sending over a network" 
+            android:text="@string/txt_SendOverNetwork"
             android:checked= "false" />"
 
     </RadioGroup>
@@ -37,7 +37,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="\nAnd its format:"
+        android:text="@string/txt_AndFormat"
         android:textSize="@dimen/abc_text_size_medium_material" />
     
 </LinearLayout>
