--- a/andFlmsg_Head_CPP120/src/main/res/layout/terminal.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/terminal.xml
@@ -10,7 +10,7 @@
             android:id="@+id/minsec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00:00"
+            android:text="@string/txt_0000"
             android:textSize="30sp" >
 
         </TextView>
@@ -27,7 +27,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.00"
-            android:text="Terminal Screen" >
+            android:text="@string/txt_TerminalScreen" >
         </TextView>
     </ScrollView>
 
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:layout_weight="0.14"
-            android:text="SEND TEXT" >
+            android:text="@string/bt_SendText" >
 
         </Button>
         </LinearLayout>
