--- a/andFlmsg_Head_CPP120/src/main/res/values/rsiderrorsarray.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/values/rsiderrorsarray.xml
@@ -4,10 +4,10 @@
 <resources>
    
     <string-array name="rsid_errors_list">
-        <item>Very High</item>
-        <item>High</item>
-        <item>Medium</item>
-        <item>Low</item>
+        <item>@string/values_VeryHigh</item>
+        <item>@string/values_High</item>
+        <item>@string/values_Medium</item>
+        <item>@string/values_Low</item>
         </string-array>
     
     <string-array name="rsid_errors_values">
