--- a/andFlmsg_Head_CPP120/src/main/res/layout/terminal.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/layout/terminal.xml
@@ -7,6 +7,7 @@
 	android:id="@+id/termscreen" >
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/minsec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
